Add email to composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
             "email": "c3bdd9f14bb240f69f54c50e22@duck.com"
         },
         {
-            "name": "Nathan d.H."
+            "name": "Nathan d.H.",
+            "email": "jamesubuntu01@gmail.com"
         }
     ],
     "minimum-stability": "stable",
